--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -176,6 +176,8 @@
         box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.2);
         margin-top: 10px;
         width: 100%;
+        font-size: 30px;
+        font-family: 'Raleway', sans-serif;
     }
 
     #fire:hover {
