--- a/sass/components/_aboutme.scss
+++ b/sass/components/_aboutme.scss
@@ -1,5 +1,5 @@
 #aboutme {
-    background-color: rgb(245, 238, 230);
+    background-color: white;
     height: 700px;
 }
 
@@ -12,7 +12,7 @@
 }
 
 #theabout {
-    color: #D35051;
+    color: #006D8C;
 }
 
 #theabout p {
@@ -29,7 +29,7 @@
 @media screen and (min-width:768px) {
 
     #aboutme {
-        background-color: rgb(245, 238, 230);
+        background-color: white;
         height: 550px;
     }
 
@@ -42,7 +42,7 @@
     }
 
     #theabout {
-        color: #D35051;
+        color: #006D8C;
     }
 
     #theabout p {
@@ -59,11 +59,12 @@
 
 @media screen and (min-width:1920px) {
 
+   
+
     #aboutme {
-        background-color: rgb(245, 238, 230);
+        background-color: white;
         height: 900px;
-        background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.294) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.1) 50%, rgba(255, 255, 255, 0.1) 75%, transparent 75%, transparent);
-        background-size: 20px 20px;
+        
     }
 
     #aboutheader h3 {
@@ -75,7 +76,7 @@
     }
 
     #theabout {
-        color: #D35051;
+        color: #006D8C;
     }
 
     #theabout p {
