--- a/sass/components/_slogan.scss
+++ b/sass/components/_slogan.scss
@@ -18,7 +18,7 @@
 
     #slogan {
         height: 82px;
-        
+        background-color: white;
     }
 
     #dedication {
@@ -35,10 +35,9 @@
 
     #slogan {
         height: 120px;
-        background-color: #F5EEE6;
+        background-color: white;
         
-        background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.294) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.1) 50%, rgba(255, 255, 255, 0.1) 75%, transparent 75%, transparent);
-        background-size: 20px 20px;
+        
         
     }
 
