--- a/sass/components/_demoreel.scss
+++ b/sass/components/_demoreel.scss
@@ -1,7 +1,7 @@
 
 
 #thereel {
-    background-color: #d35051;
+    background-image: url('../images/background.jpg');
 }
 
 #thereel h3 {
@@ -25,7 +25,7 @@
 
 @media screen and (min-width:768px) {
     #thereel {
-        background-color: #d35051;
+        background-image: url('../images/background.jpg');
     }
 
     #thereel h3 {
@@ -49,7 +49,7 @@
 
 @media screen and (min-width:1920px) {
     #thereel {
-        background-color: #d35051;
+        background-image: url('../images/background.jpg');
     }
 
     #thereel h3 {
