--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,10 +1,9 @@
 
 
 #connect {
-    background-color: #F5EEE6;
+    background-color: white;
     height: 200px;
-    background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.294) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.1) 50%, rgba(255, 255, 255, 0.1) 75%, transparent 75%, transparent);
-    background-size: 20px 20px;
+    
 }
 
 #thelink h3 {
@@ -15,11 +14,11 @@
 }
 
 #thelink a {
-    color: #D35051;
+    color: #006D8C;
 }
 
 #fillup {
-    background-color: #d35051;
+    background-image: url('../images/background.jpg');
     height: 300px;
 }
 
@@ -61,10 +60,9 @@
 @media screen and (min-width:768px) {
 
     #connect {
-        background-color: #F5EEE6;
+        background-color: white;
         height: 250px;
-        background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.294) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.1) 50%, rgba(255, 255, 255, 0.1) 75%, transparent 75%, transparent);
-        background-size: 20px 20px;
+        
     }
 
     #thelink h3 {
@@ -75,11 +73,11 @@
     }
 
     #thelink a {
-        color: #D35051;
+        color: #006D8C;
     }
 
     #fillup {
-        background-color: #d35051;
+        background-image: url('../images/background.jpg');
         height: 350px;
     }
 
@@ -115,6 +113,7 @@
         box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.2);
         margin-top: 10px;
         width: 100%;
+        font-size: 18px;
     }
 
 
@@ -122,10 +121,9 @@
 
 @media screen and (min-width:1920px) {
     #connect {
-        background-color: #F5EEE6;
+        background-color: white;
         height: 300px;
-        background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.294) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.1) 50%, rgba(255, 255, 255, 0.1) 75%, transparent 75%, transparent);
-        background-size: 20px 20px;
+        
     }
 
     #thelink h3 {
@@ -136,11 +134,11 @@
     }
 
     #thelink a {
-        color: #D35051;
+        color: #006D8C;
     }
 
     #fillup {
-        background-color: #d35051;
+        background-image: url('../images/background.jpg');
         height: 500px;
     }
 
