--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -118,6 +118,11 @@
         color: white;
     }
 
+    #aboutlink {
+        text-decoration: none;
+        color: white;
+    }
+
 
     #main-header #portfolionav  {
         display: block;
