--- a/sass/components/_insights.scss
+++ b/sass/components/_insights.scss
@@ -1,7 +1,7 @@
 @use '../abstracts' as a;
 
 #insights {
-    background-color: #D35051;
+    background-image: url('../images/background.jpg');
 }
 
 #about {
@@ -29,6 +29,7 @@
 
 #mycap {
     height: 500px;
+    color: white;
 }
 
 #insights p {
@@ -37,6 +38,25 @@
     padding: 0;
     line-height: 1.5;
 }
+
+#curious {
+    height: 30px;
+    font-size: 13px;
+    padding: 0;
+    border-radius: 15px;
+    
+    background-color: #3C4A4C;
+    border: none;
+    margin-top: 10px;
+    box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.2);
+    
+}
+
+#curious a {
+    text-decoration: none;
+    color: white;
+}
+
 
 #socials {
     height: 80px;
@@ -54,12 +74,13 @@
 
 #icons a img {
     height: 31px;
+    filter: drop-shadow(2px 2px 4px rgba(255, 255, 255, 0.811));
 }
 
 @media screen and (min-width:768px) {
 
     #insights {
-        background-color: #D35051;
+        background-image: url('../images/background.jpg');
     }
 
     #about {
@@ -89,13 +110,34 @@
     #mycap {
         height: 311px;
         margin-top: 75px;
+        color: white;
     }
+
+   
 
     #insights p {
         font-size: 15px;
         text-align: left;
         padding: 0;
         line-height: 1;
+    }
+
+    #curious {
+        height: 30px;
+        font-size: 13px;
+        padding: 0;
+        border-radius: 15px;
+        color: #F5EEE6;
+        background-color: #3C4A4C;
+        border: none;
+    
+        box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.2);
+        
+    }
+
+    #curious a {
+        text-decoration: none;
+        color: white;
     }
 
     #socials {
@@ -116,6 +158,7 @@
 
     #icons a img {
         height: 50px;
+        filter: drop-shadow(2px 2px 4px rgba(255, 255, 255, 0.811));
     }
     
 
@@ -124,7 +167,7 @@
 @media screen and (min-width:1920px) {
 
     #insights {
-        background-color: #D35051;
+        background-image: url('../images/background.jpg');
     }
 
     #about {
@@ -133,7 +176,10 @@
         font-size: 80px;
         margin-bottom: 88px;
         padding: 0;
+        color: white;
     }
+
+   
 
     #myphoto {
         height: 600px;
@@ -159,7 +205,7 @@
         padding: 0;
         line-height: 1.5;
         margin-top: 58px;
-        
+        color: white;
     }
 
     #curious {
@@ -167,8 +213,8 @@
         font-size: 30px;
         padding: 0;
         border-radius: 15px;
-        background-color: #F5EEE6;
-        color: #3C4A4C;
+        color: #F5EEE6;
+        background-color: #3C4A4C;
         border: none;
         
         box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.2);
@@ -176,13 +222,26 @@
     }
 
     #curious:hover {
-        background-color: #3C4A4C;
-        color:white;
+        background-color:white;
+        color: #3C4A4C;
+    }
+
+    #curious a:hover {
+        background-color:white;
+        color: #3C4A4C;
     }
 
     #curious a {
         text-decoration: none;
-        color: #D35051;
+        color: white;
+    }
+
+    
+
+    #curious  {
+       
+        color: #F5EEE6;
+        background-color: #3C4A4C;
     }
 
     #socials {
@@ -204,7 +263,10 @@
 
     #icons a img {
         height: 70px;
+        filter: drop-shadow(2px 2px 4px rgba(255, 255, 255, 0.811));
     }
+
+    
     
 
 }
