--- a/sass/components/_gallery.scss
+++ b/sass/components/_gallery.scss
@@ -202,7 +202,7 @@
     }
 
     .lightbox_close:hover {
-        color: #D35051;
+        color: #006D8C;
     }
 
     .lightbox article {
@@ -380,7 +380,7 @@
     }
 
     .lightbox_close:hover {
-        color: #D35051;
+        color: #006D8C;
     }
 
     .lightbox article {
